// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trae -> request makes a DELETE request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "body": Object {
      "baz": "foo",
    },
    "headers": Object {},
    "method": "DELETE",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> request makes a GET request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "GET",
    "params": Object {
      "bar": "test",
      "foo": "sar",
    },
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> request makes a HEAD request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "headers": Object {},
    "method": "HEAD",
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> request makes a PATCH request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "PATCH",
    "patch": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> request makes a POST request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "body": "{\\"foo\\":\\"baz\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "POST",
    "post": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> request makes a PUT request to baseURL + path using the request method 1`] = `
Object {
  "config": Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "PUT",
    "put": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    "_headers": Object {
      "content-length": Array [
        "13",
      ],
      "content-type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;
